[gd_scene load_steps=2 format=3 uid="uid://42gux3sh7vl4"]

[ext_resource type="Script" uid="uid://cvx7tffvwqn03" path="res://Scripts/event.gd" id="1_gclln"]

[node name="EventUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_gclln")

[node name="TextBoxPanel" type="Panel" parent="."]
anchors_preset = -1
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 1.0
grow_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="TextBoxPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TextBoxPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40

[node name="RichTextLabel" type="RichTextLabel" parent="TextBoxPanel/MarginContainer"]
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
fit_content = true

[node name="ContinueIcon" type="TextureRect" parent="TextBoxPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="ChoicePopup" type="PanelContainer" parent="."]
visible = false
clip_contents = true
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="ChoicePopup"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ChoicePopup"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ChoicePopup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PopupLabel" type="RichTextLabel" parent="ChoicePopup/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
"
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="ChoicePopup/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Control2" type="Control" parent="ChoicePopup/MarginContainer/VBoxContainer/ChoicesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ChoicePopup/MarginContainer/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "OK"

[node name="Control" type="Control" parent="ChoicePopup/MarginContainer/VBoxContainer/ChoicesContainer"]
layout_mode = 2
size_flags_horizontal = 3
